[tool.poetry]
name = "appmakerexecutor"
version = "0.1.0"
description = "A package to deploy appmaker graphs"
authors = ["etsardou"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
